automatic update commit